# vbscript_preprocessor

./: .gitmodules  CMakeLists.txt
source/: main.cpp  vbscript_preprocessor.cpp  vbscript_preprocessor.h
test/: application.vbs
test/lib1/include/lib1/: include1.vbs
test/lib2/include/lib2/: include1.vbs
